syntax = "proto3";
option csharp_namespace = "BlazorBoilerplate.Server";

import "Enumerations.proto";
import "Common.proto";

message GetCompatibleAutoMlSolutionsRequest {
    string username = 1;
    map<string, string> configuration = 2;
  }
  
message GetCompatibleAutoMlSolutionsResponse {
    repeated string AutoMlSolutions = 1;
  }

message GetDatasetCompatibleTasksRequest {
    string username = 1;
    string datasetName = 2;
  }
  
message GetDatasetCompatibleTasksResponse {
    repeated string tasks = 1;
  }
  
message GetSupportedMlLibrariesRequest {
    string username = 1;
    string task = 2;
  }
  
message GetSupportedMlLibrariesResponse {
    repeated string MlLibraries = 1;
  }


message StartAutoMlProcessRequest {
   string username = 1;
    string dataset = 2;
    MachineLearningTask task = 3;
    AutoMlConfigurationTabularData tabularConfig = 4;
    repeated string requiredLibraries = 5;
    repeated string requiredAutoMls = 6;
    AutoMlRuntimeConstraints runtimeConstraints = 7;
    map<string, string> fileConfiguration = 8;
    TestConfiguration testConfig = 9;
    string metric = 10;
  }
  
  
message StartAutoMlProcessResponse {
    ControllerReturnCode result = 1;
    string sessionId = 2;
  }